--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
   <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
   <script src="https://unpkg.com/photo-sphere-viewer@4.0.1/dist/photo-sphere-viewer.js"></script>
   <style>
-    html, body { margin: 0; height: 100%; }
-    #panorama { width: 100%; height: 100%; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+    #panorama {
+      width: 100%;
+      height: 100vh; /* full viewport height */
+    }
   </style>
 </head>
 <body>
   <div id="panorama"></div>
   <script>
-    const viewer = new PhotoSphereViewer.Viewer({
-      container: document.getElementById('panorama'),
-      panorama: 'https://photo-sphere-viewer.js.org/assets/sphere.jpg', // test image
-      navbar: true,
-      defaultYaw: 0
+    window.addEventListener('load', () => {
+      const viewer = new PhotoSphereViewer.Viewer({
+        container: document.getElementById('panorama'),
+        panorama: 'https://photo-sphere-viewer.js.org/assets/sphere.jpg', // test image
+        navbar: true,
+        defaultYaw: 0,
+      });
     });
   </script>
 </body>
