Change panorama image URL in index.html
Updated the panorama image source in the viewer.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     window.addEventListener('load', () => {
       const viewer = new PhotoSphereViewer.Viewer({
         container: document.getElementById('panorama'),
-        panorama: 'https://photo-sphere-viewer.js.org/assets/sphere.jpg', // test image
+        panorama: 'https://i.postimg.cc/Fz4WhcWB/roman-(1).jpg', // test image
         navbar: true,
         defaultYaw: 0,
       });
@@ -34,3 +34,4 @@
   </script>
 </body>
 </html>
+
