--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     window.addEventListener('load', () => {
       const viewer = new PhotoSphereViewer.Viewer({
         container: document.getElementById('panorama'),
-        panorama: 'https://i.postimg.cc/Fz4WhcWB/roman-(1).jpg', // test image
+        panorama: 'https://github.com/ayahT/viewer360roman1/blob/main/roman%20(1).jpg', // test image
         navbar: true,
         defaultYaw: 0,
       });
@@ -34,4 +34,5 @@
   </script>
 </body>
 </html>
+
 
