--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     window.addEventListener('load', () => {
       const viewer = new PhotoSphereViewer.Viewer({
         container: document.getElementById('panorama'),
-        panorama: 'https://github.com/ayahT/viewer360roman1/blob/main/roman%20(1).jpg', // test image
+        panorama:'https://raw.githubusercontent.com/ayahT/viewer360roman1/main/roman%20%281%29.jpg', // test image
         navbar: true,
         defaultYaw: 0,
       });
@@ -34,5 +34,6 @@
   </script>
 </body>
 </html>
+
 
 
