--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     #panorama {
       width: 100%;
-      height: 100vh; /* full viewport height */
+      height: 100vh;
     }
   </style>
 </head>
@@ -26,7 +26,7 @@
     window.addEventListener('load', () => {
       const viewer = new PhotoSphereViewer.Viewer({
         container: document.getElementById('panorama'),
-        panorama:'https://raw.githubusercontent.com/ayahT/viewer360roman1/main/roman%20%281%29.jpg', // test image
+        panorama: 'https://raw.githubusercontent.com/ayahT/viewer360roman1/main/roman%20(1).jpg',
         navbar: true,
         defaultYaw: 0,
       });
@@ -34,6 +34,3 @@
   </script>
 </body>
 </html>
-
-
-
